--- a/Boycott-IE/en.html
+++ b/Boycott-IE/en.html
@@ -21,7 +21,7 @@
 <p>You are using an old version of Internet Explorer (IE11 or below or a browser using this kernel). This means that you will not be able to access this website before upgrading your browser.</p>
 <div class=hr></div>
 <h2>Please note: Support for Windows XP and older versions of Internet Explorer has been discontinued</h2>
-<p>As of January 12, 2016, Microsoft no longer provides corresponding support and updates for IE 11 and below. Without critical browser security updates, your computer may be vulnerable to harmful viruses, spyware, and other malicious software that can steal or damage your business data and information. Please refer to <a href=https://support.dmeng.net/end-of-ie-support.html>Microsoft's end of support for older versions of Internet Explorer.</a> </p>
+<p>As of January 12, 2016, Microsoft no longer provides corresponding support and updates for IE 11 and below. Without critical browser security updates, your computer may be vulnerable to harmful viruses, spyware, and other malicious software that can steal or damage your business data and information. Please refer to <a href=https://www.microsoft.com/zh-cn/WindowsForBusiness/End-of-IE-support>Microsoft's end of support for older versions of Internet Explorer.</a> </p>
 <div class=hr></div>
 <h2>More advanced browser</h2>
 <p class=targetline>It is recommended to use the latest version of the following browsers. If your computer already has the latest version of the following browser, you can directly use the browser speed mode to access.</p>
