--- a/Boycott-IE/en.html
+++ b/Boycott-IE/en.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html> <html lang=zh-CN><!--
- Page saved with SingleFile 
- url: https://support.dmeng.net/upgrade-your-browser.html 
- saved date: Sun Apr 26 2020 08:58:02 GMT+0800 (中国标准时间)
---><meta charset=utf-8>
+<!DOCTYPE html> <html lang=zh-CN><meta charset=utf-8>
 <meta name=renderer content=webkit>
 <meta name=force-rendering content=webkit>
 <meta http-equiv=X-UA-Compatible content="IE=Edge,chrome=1">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-<title>请升级你的浏览器</title>
-<meta name=description content=这是一个开放的旧版IE升级提示页，普通用户可通过本页介绍快速了解为何要升级旧版IE浏览器以及如何升级浏览器，开发者可引用本页提供的代码为网站接入旧版IE升级提示。>
+<title>It's time to upgrade your browser</title>
+
 <link rel=canonical href=https://support.dmeng.net/upgrade-your-browser.html>
 
 <meta http-equiv=Cache-Control content=no-siteapp>
@@ -21,7 +17,7 @@
 <p>You are using an old version of Internet Explorer (IE11 or below or a browser using this kernel). This means that you will not be able to access this website before upgrading your browser.</p>
 <div class=hr></div>
 <h2>Please note: Support for Windows XP and older versions of Internet Explorer has been discontinued</h2>
-<p>As of January 12, 2016, Microsoft no longer provides corresponding support and updates for IE 11 and below. Without critical browser security updates, your computer may be vulnerable to harmful viruses, spyware, and other malicious software that can steal or damage your business data and information. Please refer to <a href=https://www.microsoft.com/zh-cn/WindowsForBusiness/End-of-IE-support>Microsoft's end of support for older versions of Internet Explorer.</a> </p>
+<p>As of January 12, 2016, Microsoft no longer provides corresponding support and updates for IE 11 and below. Without critical browser security updates, your computer may be vulnerable to harmful viruses, spyware, and other malicious software that can steal or damage your business data and information. Please refer to <a href=https://www.microsoft.com/en/WindowsForBusiness/End-of-IE-support>Microsoft's end of support for older versions of Internet Explorer.</a> </p>
 <div class=hr></div>
 <h2>More advanced browser</h2>
 <p class=targetline>It is recommended to use the latest version of the following browsers. If your computer already has the latest version of the following browser, you can directly use the browser speed mode to access.</p>
