--- a/Boycott-IE/zh-cn.html
+++ b/Boycott-IE/zh-cn.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html> <html lang=zh-CN><!--
- Page saved with SingleFile 
- url: https://support.dmeng.net/upgrade-your-browser.html 
- saved date: Sun Apr 26 2020 08:58:02 GMT+0800 (中国标准时间)
---><meta charset=utf-8>
+<!DOCTYPE html> <html lang=zh-CN><meta charset=utf-8>
 <meta name=renderer content=webkit>
 <meta name=force-rendering content=webkit>
 <meta http-equiv=X-UA-Compatible content="IE=Edge,chrome=1">
