--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -44,9 +44,9 @@
 <p>请尝试点击下方“维基百科镜像”进入查看。但是你的访问可能会被浏览器以“第三方网页”、“内容不安全”、“被多人投诉”等理由恶意拦截。您可以换用其他浏览器进行访问，如下方我们推荐的浏览器。</p>
 <p>（如果您被手机QQ/微信等软件内置的浏览器拦截，可返回后尝试用其他浏览器打开）</p>
 <p>继续访问传送：</p>
-<h2><a id='wiki1'></a></h2>
-<h2><a id='wiki2'></a></h2>
-<h2><a id='wiki3'></a></h2>
+<h2><a id='wiki1' target="_blank" rel="noopener"></a></h2>
+<h2><a id='wiki2' target="_blank" rel="noopener"></a></h2>
+<h2><a id='wiki3' target="_blank" rel="noopener"></a></h2>
 <div class=hr></div>
 <h2>推荐使用的浏览器</h2>
 <p class=targetline>推荐使用以下浏览器访问，点击它们进入其官方网站进行下载。如果你的已有以下浏览器直接使用即可。</p>
