--- a/wikipedia.html
+++ b/wikipedia.html
@@ -13,6 +13,6 @@ function GetQueryString(name) {
 	 var s=GetQueryString("s")||0;
 	 var title=GetQueryString("title")||0;
 var lang = (navigator.language||navigator.userLanguage).toLowerCase();//常规浏览器语言和IE浏览器
-//if(lang == 'zh-cn'){window.location.href="https://cjh0613.gitee.io/redirect/wikipedia/zh-cn.html?s="+s;}
-//else{window.location.href="https://zh.wikipedia.org/wiki/"+s;}
+if(lang == 'zh-cn'){window.location.href="https://cjh0613.gitee.io/redirect/wikipedia/zh-cn.html?s="+s;}
+else{window.location.href="https://zh.wikipedia.org/wiki/"+s;}
 </script></html>
