--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -49,8 +49,8 @@
 <h2><a id='wiki1' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki2' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki3' target="_blank" rel="noopener"></a></h2>
-<h2><a id='wikimo' target="_blank" rel="noopener" href='https://zh.m.wikipedia.org/wiki/'>维基百科手机官网（需科学上网）</a></h2>
-<h2><a id='wikio' target="_blank" rel="noopener" href='https://zh.wikipedia.org/wiki/'>维基百科PC官网（需科学上网）</a></h2>
+<h2><a id='wikimo' target="_blank" rel="noopener" href='https://zh.m.wikipedia.org/wiki/'>维基百科手机（需科学上网）</a></h2>
+<h2><a id='wikio' target="_blank" rel="noopener" href='https://zh.wikipedia.org/wiki/'>维基百科PC（需科学上网）</a></h2>
 <div class=hr></div>
 <h2>推荐使用的浏览器</h2>
 <p class=targetline>推荐使用以下浏览器访问，点击它们进入其官方网站进行下载。如果你的已有以下浏览器直接使用即可。</p>
