--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		  var s=GetQueryString("s")||0;
 		  var name=GetQueryString("name")||0;
 	$(document).ready(function () {
+		name=decodeURI(name)
 	if(s){$('#wiki1').text(name);
 	$("#wiki1").attr("href",s);
 	}
