--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1>准备继续访问您刚才点击的链接……</h1>
 <div class=hr></div>
 <h2>继续访问提示：</h2>
-<p>请尝试点击下方“维基百科镜像”进入查看。但是你的访问可能会被浏览器以“第三方网页”、“内容不安全”、“被多人投诉”等理由恶意拦截。您可以换用其他浏览器进行访问，如下方我们推荐的浏览器。</p>
+<p>请尝试点击下方继续访问传送链接进入查看。但是你的访问可能会被浏览器以“第三方网页”、“内容不安全”、“被多人投诉”等理由恶意拦截。您可以换用其他浏览器进行访问，如下方我们推荐的浏览器。</p>
 <p>（如果您被手机QQ/微信等软件内置的浏览器拦截，按右上角按钮尝试用其他浏览器打开）</p>
 <p>继续访问传送：</p>
 <h2><a id='wiki1' target="_blank" rel="noopener"></a></h2>
