--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -5,32 +5,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <title> 准备访问维基百科……</title>
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript">
-	function GetQueryString(name) {
-		          var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i"); 
-		          var r = window.location.search.substr(1).match(reg); //获取url中"?"符后的字符串并正则匹配
-		          var context = ""; 
-		 
-		      if (r != null) 
-		      context = r[2]; 
-		     reg = null; 
-		     r = null; 
-		     return context == null || context == "" || context == "undefined" ? "" : context; 
-		  }
-		  var s=GetQueryString("s")||0;
-		  var title=GetQueryString("title")||0;
-	$(document).ready(function () {
-	if(s){$('#wiki1').text('维基百科镜像1');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');$('#wiki4').text('维基百科镜像4');
-	$("#wiki1").attr("href","https://mwiki.upupming.now.sh/wiki/"+s);
-	$("#wiki2").attr("href","https://zh.jinzhao.wiki/wiki/"+s);
-	$("#wiki3").attr("href","https://mw.upupming.site/wiki/"+s);
-	$("#wiki4").attr("href","http://www.bosimedia.com/wiki/"+s);
-	$("#wikimo").attr("href","https://zh.m.wikipedia.org/wiki/"+s);
-	$("#wikio").attr("href","https://zh.wikipedia.org/wiki/"+s);
-	}
-	 })
-
-</script>
+<script type="text/javascript" src="cjh0613/redirect/wikipedia/zh-cn.js"></script>
 <meta name=description content=维基百科（Wikipedia）是世界上最大的自由内容、公开编辑且多语言的网络百科全书协作项目，通过Wiki技术使得包括您在内的所有人都可以简单地使用网页浏览器修改其中的内容。当前是全球网络上最大且最受大众欢迎的参考工具书，名列全球十大最受欢迎的网站。>
 <meta http-equiv=Cache-Control content=no-siteapp>
 <meta http-equiv=Cache-Control content=no-transform>
