--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -53,7 +53,7 @@
 <h2><a id='wikio' target="_blank" rel="noopener" href='https://zh.wikipedia.org/wiki/'>维基百科PC（需科学上网）</a></h2>
 <div class=hr></div>
 <h2>推荐使用的浏览器</h2>
-<p class=targetline>推荐使用以下浏览器访问，点击它们进入其官方网站进行下载。如果你的已有以下浏览器直接使用即可。</p>
+<p class=targetline>推荐使用以下浏览器访问，点击它们进入其官方网站进行下载。如果你的设备已有以下浏览器直接使用即可。</p>
 <p>（但请不要使用手机QQ/微信等软件内置的浏览器进行下载，否则您可能被引导下载应用宝等垃圾软件）</p>
 <ul id=browser-list class=browser-list>
 <li class="browser opera">
