--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -77,4 +77,4 @@
 <p>2、为防止您的访问被浏览器恶意拦截。</p>
 <div class=hr></div>
 <h2>如何使用这个页面链接？</h2>
-您可以参考这个说明：<a href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a>
+您可以参考这个说明：<a target="_blank" rel="noopener" href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a>
