替换宕机的mw.upupming.site

--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -23,7 +23,7 @@
 	if(s){$('#wiki1').text('维基百科镜像1');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');$('#wiki4').text('维基百科镜像4');
 	$("#wiki1").attr("href","https://mwiki.upupming.now.sh/wiki/"+s);
 	$("#wiki2").attr("href","https://zh.jinzhao.wiki/wiki/"+s);
-	$("#wiki3").attr("href","https://mw.upupming.site/wiki/"+s);
+	$("#wiki3").attr("href","https://zh-wikipedia.mirror.wit.im/wiki/"+s);
 	$("#wiki4").attr("href","http://www.bosimedia.com/wiki/"+s);
 	$("#wikimo").attr("href","https://zh.m.wikipedia.org/wiki/"+s);
 	$("#wikio").attr("href","https://zh.wikipedia.org/wiki/"+s);
