--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -76,5 +76,6 @@
 <p>1、为您提供可供访问的参考资料链接。</p>
 <p>2、为防止您的访问被浏览器恶意拦截。</p>
 <div class=hr></div>
-<h2>如何使用这个页面链接？</h2>
-您可以参考这个说明：<a target="_blank" rel="noopener" href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a>
+<h2>如何使用这个导向wikipedia页面的链接？</h2>
+<p>您可以参考这个说明：</p>
+<p><a target="_blank" rel="noopener" href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a></p>
