--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -74,7 +74,7 @@
 <div class=hr></div>
 <h2>为什么会出现这个页面？</h2>
 <p>1、为您提供可供访问的参考资料链接。</p>
-<p>2、为防止您的访问被浏览器恶意拦截。</p>
+<p>2、为向您说明您的访问可能会被浏览器恶意拦截。</p>
 <div class=hr></div>
 <h2>如何使用这个导向wikipedia页面的链接？</h2>
 <p>您可以参考这个说明：</p>
