--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -24,7 +24,7 @@
 	$("#wiki1").attr("href","https://www.wanweibaike.com/wiki-"+s);
 	$("#wiki2").attr("href","https://zh.jinzhao.wiki/wiki/"+s);
 	$("#wiki3").attr("href","https://zh-wikipedia.mirror.wit.im/wiki/"+s);
-	$("#wiki4").attr("href","http://www.bosimedia.com/wiki/"+s);
+	$("#wiki4").attr("href","https://img.xileso.top/wiki/"+s);
 	$("#wiki5").attr("href","https://mwiki.upupming.now.sh/wiki/"+s);
 	$("#wikimo").attr("href","https://zh.m.wikipedia.org/wiki/"+s);
 	$("#wikio").attr("href","https://zh.wikipedia.org/wiki/"+s);
