--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -81,3 +81,4 @@
 <h2>如何使用这个导向wikipedia页面的链接？</h2>
 <p>您可以参考这个说明：</p>
 <p><a target="_blank" rel="noopener" href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a></p>
+<div style="display:none"><script type="text/javascript" src="//js.users.51.la/20797113.js"></script><script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278919106&web_id=1278919106"></script></div>
