--- a/wikipedia/tool/index.html
+++ b/wikipedia/tool/index.html
@@ -15,6 +15,7 @@
 <h1>维基百科定向链接生成器</h1>
 <p>维基百科（Wikipedia）是世界上最大的自由内容、公开编辑且多语言的网络百科全书协作项目，通过Wiki技术使得包括您在内的所有人都可以简单地使用网页浏览器修改其中的内容。当前是全球网络上最大且最受大众欢迎的参考工具书，名列全球十大最受欢迎的网站。</p>
 <p>为了便于中国大陆访客浏览，您可以使用本生成器生成一个导向维基百科镜像站的链接。</p>
+<p>只需在链接后添加原维基百科页链接“https://zh.wikipedia.org/wiki/”之后的内容即可，如对原始页面“https://zh.wikipedia.org/wiki/碳”，只需在下方条目输入框输入“碳”。</p>
 <div class=hr></div>
 <h2>开始生成：</h2>
 
