--- a/wikipedia/tool/index.html
+++ b/wikipedia/tool/index.html
@@ -46,6 +46,7 @@
 			var server  = $('input[name="server"]:checked').val();
 			var CJHlink="https://cjh0613."+server+".io/redirect/wikipedia/"+language+"?=";
 		       var a=$("#wikiKW").val();
+			   a=encodeURI(a);
 			   $("#wikiKW").attr("value",a);
 			   s=$("#wikiKW").attr("value");
 			     $("#url2").attr("value",CJHlink+s);
