--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -4,7 +4,7 @@
 <meta http-equiv=X-UA-Compatible content="IE=Edge,chrome=1">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <title> 准备访问维基百科……</title>
-<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src = "https://cdn.staticfile.org/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript">
 	function GetQueryString(name) {
 		          var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i"); 
