不含中文请选“否”

--- a/wikipedia/tool/index.html
+++ b/wikipedia/tool/index.html
@@ -32,7 +32,7 @@
 	对输入的条目进行转码：
 	<input type="radio" class="cb-radio" id="r5" name="encode" value="1"/>是
 	<input type="radio" class="cb-radio cb-gap2" id="r6" name="encode" value="0"/>否<br>
-	（输入条目含中文，一般对输入的条目进行转码较好，否则qq等不识别链接。虽然无论链接是否转码，使用浏览器都可访问）<br>
+	（输入条目含中文，一般对输入的条目进行转码较好，否则qq等不识别链接。不含中文请选“否”。虽然无论链接是否转码，使用浏览器都可访问）<br>
 在这里输入条目：<input type="text" id="wikiKW" value = "">（检测到此框变动时自动生成链接，请先选择上方单选再填写此框） <!--button type = "button" id = "btn">生成</button--><br>
 <button type = "button" id = "btn2">复制后面的网址</button><input size="100" type="text" id="url2" value = ""><br>
 <button type = "button" id = "btn3">复制后面的md</button><input size="100" type="text" id="url3" value = ""><br>
