--- a/wikipedia/en.html
+++ b/wikipedia/en.html
@@ -17,10 +17,11 @@
 		     r = null; 
 		     return context == null || context == "" || context == "undefined" ? "" : context; 
 		  }
-		  var s=GetQueryString("s")||0;
+		  var s=GetQueryString("s")||'';
 		  var title=GetQueryString("title")||0;
 	$(document).ready(function () {
-	if(s){$('#wiki1').text('维基百科镜像1（部分内容进行改编/屏蔽以符合中国大陆政策）');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');//$('#wiki4').text('维基百科镜像4');$('#wiki5').text('维基百科镜像5');
+	//if(s){
+		$('#wiki1').text('维基百科镜像1（部分内容进行改编/屏蔽以符合中国大陆政策）');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');//$('#wiki4').text('维基百科镜像4');$('#wiki5').text('维基百科镜像5');
 	$("#wiki1").attr("href","https://en.wanweibaike.com/wiki-"+s);
 	$("#wiki2").attr("href","https://en.jinzhao.wiki/wiki/"+s);
 	$("#wiki3").attr("href","https://en-wikipedia.mirror.wit.im/wiki/"+s);
@@ -28,7 +29,7 @@
 	$("#wiki5").attr("href","https://mwiki.upupming.now.sh/wiki/"+s);
 	$("#wikimo").attr("href","https://zh.m.wikipedia.org/wiki/"+s);
 	$("#wikio").attr("href","https://zh.wikipedia.org/wiki/"+s);
-	}
+	//}
 	 })
 
 </script>
