--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -44,9 +44,9 @@
 <p>维基百科（Wikipedia）是世界上最大的自由内容、公开编辑且多语言的网络百科全书协作项目，通过Wiki技术使得包括您在内的所有人都可以简单地使用网页浏览器修改其中的内容。当前是全球网络上最大且最受大众欢迎的参考工具书，名列全球十大最受欢迎的网站。</p>
 <div class=hr></div>
 <h2>继续访问维基百科：</h2>
-<p>请尝试点击下方“维基百科镜像”进入查看。但是你的访问可能会被浏览器以“第三方网页”、“内容不安全”、“被多人投诉”等理由恶意拦截。您可以换用其他浏览器进行访问，如下方我们推荐的浏览器。</p>
+<p>请尝试按顺序点击下方“维基百科镜像”进入查看。但是你的访问可能会被浏览器以“第三方网页”、“内容不安全”、“被多人投诉”等理由恶意拦截。您可以换用其他浏览器进行访问，如下方我们推荐的浏览器。</p>
 <p>（如果您被手机QQ/微信等软件内置的浏览器拦截，按右上角按钮尝试用其他浏览器打开）</p>
-<p>继续访问传送<strong>(必须指定条目才会显示镜像)</strong>：</p>
+<p>继续访问传送<strong>(<s>必须指定条目才会显示镜像</s>已取消，便于通过镜像查找条目以引用)</strong>：</p>
 <h2><a id='wiki1' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki2' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki3' target="_blank" rel="noopener"></a></h2>
