--- a/wikipedia/en.html
+++ b/wikipedia/en.html
@@ -21,13 +21,13 @@
 		  var title=GetQueryString("title")||0;
 	$(document).ready(function () {
 	if(s){
-		$('#wiki1').text('维基百科镜像1');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');//$('#wiki4').text('维基百科镜像4');$('#wiki5').text('维基百科镜像5');
+		$('#wiki1').text('维基百科镜像1');$('#wiki2').text('维基百科镜像2');$('#wiki3').text('维基百科镜像3');$('#wiki4').text('维基百科镜像4');$('#wiki5').text('维基百科镜像5');
 	$('#banTip').text('（上方站点部分内容进行改编/屏蔽以符合中国内地政策，无法访问可尝试下方地址）');
 	$("#wiki1").attr("href","https://en.wanweibaike.com/wiki-"+s);
-	$("#wiki2").attr("href","https://en.jinzhao.wiki/wiki/"+s);
+	$("#wiki2").attr("href","https://en.wiki.nekobest.com/wiki/"+s);
 	$("#wiki3").attr("href","https://en-wikipedia.mirror.wit.im/wiki/"+s);
-	$("#wiki4").attr("href","http://www.bosimedia.com/wiki/"+s);
-	$("#wiki5").attr("href","https://mwiki.upupming.now.sh/wiki/"+s);
+	$("#wiki4").attr("href","https://en.jinzhao.wiki/wiki/"+s);
+	$("#wiki5").attr("href","https://en.wikiredia.com/wiki/"+s);
 	$("#wikimo").attr("href","https://zh.m.wikipedia.org/wiki/"+s);
 	$("#wikio").attr("href","https://zh.wikipedia.org/wiki/"+s);
 	}
