--- a/wikipedia/tool/index.html
+++ b/wikipedia/tool/index.html
@@ -27,16 +27,17 @@
 	<input type="radio" class="cb-radio" id="r1" name="language" value="zh-cn"/>简体中文
 	<input type="radio" class="cb-radio cb-gap2" id="r2" name="language" value="en"/>英文<br>
 	选择重定向服务器：
-	<input type="radio" class="cb-radio" id="r3" name="server" value="github"/>Github（推荐）
-	<input type="radio" class="cb-radio cb-gap2" id="r4" name="server" value="bitbucket"/>Bitbucket<br>
+	<input type="radio" class="cb-radio cb-gap2" id="r7" name="server" value="cjhredirect.now.sh"/>ZEIT（推荐）
+	<input type="radio" class="cb-radio" id="r3" name="server" value="cjh0613.github.io/redirect"/>Github
+	<input type="radio" class="cb-radio cb-gap2" id="r4" name="server" value="cjh0613.bitbucket.io/redirect"/>Bitbucket<br>
 	对输入的条目进行转码：
 	<input type="radio" class="cb-radio" id="r5" name="encode" value="1"/>是
 	<input type="radio" class="cb-radio cb-gap2" id="r6" name="encode" value="0"/>否<br>
 	（输入条目含中文，一般对输入的条目进行转码较好，否则qq等不识别链接。不含中文请选“否”。虽然无论链接是否转码，使用浏览器都可访问）<br>
 在这里输入条目：<input type="text" id="wikiKW" value = "">（检测到此框变动时自动生成链接，请先选择上方单选再填写此框） <!--button type = "button" id = "btn">生成</button--><br>
 <button type = "button" id = "btn2">复制后面的网址</button><input size="100" type="text" id="url2" value = ""><br>
-<button type = "button" id = "btn3">复制后面的md</button><input size="100" type="text" id="url3" value = ""><br>
-<button type = "button" id = "btn4">复制后面的md</button><input size="100" type="text" id="url4" value = ""><br>
+<button type = "button" id = "btn3">复制后面的md&nbsp;&nbsp;</button><input size="100" type="text" id="url3" value = ""><br>
+<button type = "button" id = "btn4">复制后面的md&nbsp;&nbsp;</button><input size="100" type="text" id="url4" value = ""><br>
 <button type = "button" id = "btn5">复制后面的html</button><input size="100" type="text" id="url5" value = ""><br>
 <button type = "button" id = "btn6">复制后面的html</button><input size="100" type="text" id="url6" value = ""><br>
 <script type="text/javascript">
@@ -44,13 +45,13 @@
 	$(document).ready(function () {
 		var flag='0';
 		$("#r1").eq(0).attr("checked", true);
-		$("#r3").eq(0).attr("checked", true);
+		$("#r7").eq(0).attr("checked", true);
 		$("#r5").eq(0).attr("checked", true);
 		$("#wikiKW").bind("input propertychange",function(event){
 			var language  = $('input[name="language"]:checked').val();
 			var server  = $('input[name="server"]:checked').val();
 			var encode  = $('input[name="encode"]:checked').val();
-			var CJHlink="https://cjh0613."+server+".io/redirect/wikipedia/"+language+".html?s=";
+			var CJHlink="https://"+server+"/wikipedia/"+language+".html?s=";
 		       var a=$("#wikiKW").val();
 			   if(encode=='1'){a=encodeURI(a);}
 			   $("#wikiKW").attr("value",a);
