https://cjhredirect.now.sh/wikipedia/tool/index.html

--- a/wikipedia/en.html
+++ b/wikipedia/en.html
@@ -85,7 +85,7 @@
 <h2>如何使用这个导向wikipedia页面的链接？</h2>
 <p>您可以参考这个说明：</p>
 <p><a target="_blank" rel="noopener" href="https://cjh0613.github.io/blog/20200429wikipediaRedirect.html">https://cjh0613.github.io/blog/20200429wikipediaRedirect.html</a></p>
-<p>这里还提供了<a target="_blank" rel="noopener" href="/redirect/wikipedia/tool/index.html">生成此引用链接的在线生成工具</a></p>
+<p>这里还提供了<a target="_blank" rel="noopener" href="https://cjhredirect.now.sh/wikipedia/tool/index.html">生成此引用链接的在线生成工具</a></p>
 <div class=hr></div>
 <h2>本维基百科引用页面托管于ZEIT、Github、Bitbucket，永久免费使用，永久无广告</h2>
 <div style="display:none"><script type="text/javascript" src="//js.users.51.la/20797113.js"></script><script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278919106&web_id=1278919106"></script></div>
