--- a/wikipedia/zh-cn.html
+++ b/wikipedia/zh-cn.html
@@ -55,7 +55,7 @@
 <h2><a id='wiki3' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki4' target="_blank" rel="noopener"></a></h2>
 <h2><a id='wiki5' target="_blank" rel="noopener"></a></h2>
-<h2><a target="_blank" rel="noopener" href='https://cjh0613.github.io/blog/WikipediaMirror.html'>更多镜像网站</a></h2>
+<h2><a target="_blank" rel="noopener" href='https://cjh0613.com/WikipediaMirror.html'>更多镜像网站</a></h2>
 <h2><a id='wikimo' target="_blank" rel="noopener" href='https://zh.m.wikipedia.org/wiki/'>维基百科手机（需科学上网）</a></h2>
 <h2><a id='wikio' target="_blank" rel="noopener" href='https://zh.wikipedia.org/wiki/'>维基百科PC（需科学上网）</a></h2>
 <div class=hr></div>
